synchronized with current cycle-nab version