@@ -1,17 +1,30 @@
-package com.example.json_test;
+package com.hci.cyclenav.guidance;
 
-import java.util.LinkedList;
+import java.util.ArrayList;
 
 import com.mapquest.android.maps.BoundingBox;
 import com.mapquest.android.maps.GeoPoint;
 
+/* GuidanceRoute.java
+ * 
+ * Container class for storing an ArrayList of GuidanceNodes
+ * constructors accept either an arraylist of GuidanceNodes (for retrieval 
+ * from a parcel) or GuidanceData for generating a new route from JSON
+ * also has methods for calculating distance between nodes and the user
+ */
+
 public class GuidanceRoute {
-	BoundingBox boundingBox;
-	LinkedList<GuidanceNode> nodes;
+	ArrayList<GuidanceNode> nodes;
 	int currentNodeIndex;
 	
 	public GuidanceRoute() {
 		// TODO Auto-generated constructor stub
+	}
+	
+	//accept deserialized GuidanceNodes and wrap in a new route
+	public GuidanceRoute(ArrayList<GuidanceNode> nodes) {
+		currentNodeIndex = 0;
+		this.nodes = nodes;
 	}
 	
 	/*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
@@ -20,13 +33,9 @@ public class GuidanceRoute {
     /*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
 	
 	public GuidanceRoute(GuidanceData d) {
-		GeoPoint ul = new GeoPoint(d.boundingBox.ul.lat, d.boundingBox.ul.lng);
-		GeoPoint lr = new GeoPoint(d.boundingBox.lr.lat, d.boundingBox.lr.lng);
-		boundingBox = new BoundingBox(ul, lr);
+		ArrayList<GeoPoint> pointList = getPoints(d.shapePoints);
 		
-		LinkedList<GeoPoint> pointList = getPoints(d.shapePoints);
-		
-		nodes = new LinkedList<GuidanceNode>();
+		nodes = new ArrayList<GuidanceNode>();
 		for (int i = 0; i < d.GuidanceNodeCollection.length; ++i) {
 			//if the node is a turn, append it to the list
 			if (d.GuidanceNodeCollection[i].infoCollection != null) {
@@ -39,7 +48,7 @@ public class GuidanceRoute {
 				int maneuver = d.GuidanceNodeCollection[i].maneuverType;
 				double length = d.GuidanceLinkCollection[linkIndex].length;
 			
-				nodes.add(new GuidanceNode(info, loc, maneuver, length));
+				nodes.add(new GuidanceNode(info, loc, maneuver, length, linkIndex));
 			} else {
 				/* if the node is not a turn, add the length of the
 				*  corresponding link to the length of the link of the
@@ -48,27 +57,31 @@ public class GuidanceRoute {
 				if (d.GuidanceNodeCollection[i].linkIds.length > 0 &&
 						nodes.size() > 0) {
 					int linkIndex = d.GuidanceNodeCollection[i].linkIds[0];
-					nodes.getLast().length += d.GuidanceLinkCollection[linkIndex].length;
+					nodes.get(nodes.size() - 1).length += d.GuidanceLinkCollection[linkIndex].length;
 				}
 			}
 		}
 	}
 	
+	//expose the nodes for serialization and parceling
+	public ArrayList<GuidanceNode> getNodes() {
+		return nodes;
+	}
+	
 	@Override
 	public String toString() {
 		StringBuilder sb = new StringBuilder();
-		sb.append(boundingBox.toString() + "\n");
 		
 		for (GuidanceNode g : nodes) {
-			sb.append(g.toString() + "\n");
+			sb.append(g.toString() + "\n\n");
 		}
 		return sb.toString();
 	}
 	
 	//Adapter function converts the shapePoints array of length n
 	// to a linkedList of latitude/longitude ordered pairs of size n / 2
-	LinkedList<GeoPoint> getPoints(double[] latLngArray) {
-		LinkedList<GeoPoint> pointList = new LinkedList<GeoPoint>();
+	ArrayList<GeoPoint> getPoints(double[] latLngArray) {
+		ArrayList<GeoPoint> pointList = new ArrayList<GeoPoint>();
 		
 		for(int i = 0; i < latLngArray.length; i += 2) {
 			double lat = latLngArray[i];
@@ -125,33 +138,4 @@ public class GuidanceRoute {
     private double rad2deg(double rad) {
     	return (rad * 180.0 / Math.PI);
     }
-	
-    /*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
-    /*:: 	 Stores a single node (eg an intersection)	                :*/
-    /*:::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::::*/
-    
-	class GuidanceNode {
-		String info;			//from guidanceNode
-		GeoPoint location;		//from shapePoints[] via guidanceLink
-		int maneuverType;		//from guidanceNode
-		double length;
-		int[] linkIds;			//from guidanceNode
-		
-		GuidanceNode(String info, GeoPoint point, int maneuverType, double length) {
-			this.info = info;
-			this.location = point;
-			this.maneuverType = maneuverType;
-			this.length = length;
-		}
-		
-		@Override
-		public String toString() {
-			StringBuilder sb = new StringBuilder();
-			sb.append(info + ":\n");
-			sb.append("Length: " + length + "m\n");
-			sb.append(location.toString() + "\n\n");
-			
-			return sb.toString();
-		}
-	}
 }
